# GenDev7

./: .env.example  .gitmodules  .prettierrc  Dockerfile  README.md  docker-compose.yml  main.py  next.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/workflows/: python-tests.yml
GenDevBackend/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
GenDevBackend/tests/: test_integration.py
GenDevWeb/: .env.local.example  README.md  package-lock.json  package.json
app/api/: compare.py  dependencies.py  http_compare.py  ws_compare.py
app/core/: __init__.py  circuit_breaker.py  circuit_breaker_config.py  config.py  credential_manager.py  retry_config.py  settings.py
app/exceptions/: __init__.py  provider_error.py
app/factories/: __init__.py  byteme_factory.py  pingperfect_factory.py  servusspeed_factory.py  verbyndich_factory.py  webwunder_factory.py
app/models/: __init__.py
app/providers/: __init__.py  base.py  byteme.py  pingperfect.py  request_body.py  servusspeed.py  verbyndich.py  webwunder.py
app/services/: __init__.py  caching_service.py  comparison_service.py  merge.py  sharing_service.py
app/utils/: __init__.py  hmac_sign.py  http.py  logger.py  merge.py  retry.py  settings.py  slug.py
docker/nginx/: nginx.conf
src/app/: globals.css  layout.tsx  page.tsx  top-bar.tsx
src/components/: address-autocomplete-input.tsx
src/config/: constants.ts
src/hooks/: use-address-autocomplete.ts  (+10 more)
tests/: .env.test  .env.tests  conftest.py  test_integration.py
(+185 files in other folders)
