[project]
name = "gendev"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "async-lru>=2.0.5",
    "fastapi>=0.115.12",
    "httpx[http2]>=0.27,<0.28",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "redis>=6.0.0",
    "tenacity>=9.1.2",
    "uvicorn[standard]>=0.34.2",
    "zeep>=4.3.1",
]
